# dot_pic

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
docs/: readme_ja.md
src/ai_pixel_cleaner/: __init__.py  cli.py  core.py
