[project]
name = "ai-pixel-cleaner"
version = "0.1.0"
description = "Post-process AI generated images into editable pixel-art source material."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pillow>=11.0",
    "streamlit>=1.40",
]

[project.scripts]
ai-pixel-cleaner = "ai_pixel_cleaner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
